istiocon-2021/tcp/ingress/tcp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-tcp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 31400
        name: tcp
        protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-tcp
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-tcp-gateway
  tcp:
    - match:
      - port: 31400
      route:
      - destination:
           host: httpbin
           port:
              number: 8000
